--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "16.1.5",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-quill-new": "^3.7.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
